--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -20,6 +20,15 @@ body {
 	cursor: pointer;
 }
 
+.appears-in-top-center {
+	position: absolute;
+	/*width: 100%;*/
+	z-index: 99999;
+	top: 10px;
+	left: 50%;
+	transform: translateX(-50%);
+}
+
 @media screen and (min-width: 768px) {
 	.body--login {
 		height: 100vh;
