--- a/src/main/webapp/resources/css/styles.css
+++ b/src/main/webapp/resources/css/styles.css
@@ -22,11 +22,14 @@ body {
 
 .appears-in-top-center {
 	position: absolute;
-	/*width: 100%;*/
 	z-index: 99999;
 	top: 10px;
 	left: 50%;
 	transform: translateX(-50%);
+}
+
+#user-photo {
+	object-fit: cover;
 }
 
 @media screen and (min-width: 768px) {
